gadjid/src/snapshots/gadjid__test__large-DAG05-vs-DAG06.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10005.DAG-100
g_guess: 10006.DAG-100
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0.0017171717171717172
  - 17
parent_aid:
  - 0.01686868686868687
  - 167
shd:
  - 0.006262626262626263
  - 31
t:
  - 6
  - 12
  - 14
  - 18
  - 19
  - 27
  - 34
  - 37
  - 43
  - 50
  - 53
  - 54
  - 58
  - 59
  - 63
  - 70
  - 71
  - 74
  - 75
  - 76
  - 78
  - 82
  - 85
  - 88
  - 90
  - 92
  - 94
  - 99
y: 44
z:
  - 2
  - 5
  - 8
  - 20
  - 23
  - 28
  - 29
  - 36
  - 38
  - 46
  - 51
  - 68
  - 69
  - 72
  - 81
  - 93
  - 95
  - 96
  - 98
possible_descendants_of_t_in_g_guess:
  - 6
  - 12
  - 14
  - 15
  - 17
  - 18
  - 19
  - 20
  - 22
  - 24
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 7
  - 8
  - 9
  - 10
  - 11
  - 13
  - 15
  - 16
  - 20
  - 21
  - 23
  - 24
  - 25
  - 26
  - 33
  - 39
  - 44
oset_for_t_onto_y_in_g_guess:
  - 0
  - 1
  - 3
  - 5
  - 6
  - 7
  - 9
  - 10
  - 11
  - 12
  - 16
  - 21
  - 23
  - 25
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 83
  - 84
  - 85
  - 86
  - 87
  - 89
  - 91
  - 93
  - 95
  - 96
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 15
  - 16
  - 17
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 35
  - 36
  - 38
  - 39
  - 40
  - 41
  - 42
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 51
  - 52
  - 55
  - 56
  - 57
  - 60
  - 61
  - 62
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 72
  - 73
  - 77
  - 79
  - 80
  - 81
  - 83
  - 84
  - 86
  - 87
  - 89
  - 91
  - 93
  - 95
  - 96
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 7
  - 8
  - 9
  - 10
  - 11
  - 13
  - 15
  - 16
  - 17
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 35
  - 36
  - 38
  - 39
  - 40
  - 41
  - 42
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 51
  - 52
  - 55
  - 56
  - 57
  - 60
  - 61
  - 62
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 72
  - 73
  - 77
  - 79
  - 80
  - 81
  - 83
  - 84
  - 86
  - 87
  - 89
  - 91
  - 93
  - 95
  - 96
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 7
  - 8
  - 9
  - 10
  - 11
  - 13
  - 15
  - 16
  - 17
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 35
  - 36
  - 38
  - 39
  - 40
  - 41
  - 42
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 51
  - 52
  - 55
  - 56
  - 57
  - 60
  - 61
  - 62
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 72
  - 73
  - 77
  - 79
  - 80
  - 81
  - 83
  - 84
  - 86
  - 87
  - 89
  - 91
  - 93
  - 95
  - 96
  - 97
  - 98
