gadjid/src/snapshots/gadjid__test__large-DAG07-vs-DAG08.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10007.DAG-100
g_guess: 10008.DAG-100
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0.008686868686868687
  - 86
parent_aid:
  - 0.14505050505050504
  - 1436
shd:
  - 0.00808080808080808
  - 40
t:
  - 3
  - 5
  - 6
  - 16
  - 19
  - 24
  - 29
  - 30
  - 34
  - 40
  - 42
  - 43
  - 45
  - 46
  - 50
  - 52
  - 76
  - 78
  - 79
  - 85
  - 87
  - 93
  - 97
  - 99
y: 60
z:
  - 1
  - 4
  - 7
  - 8
  - 9
  - 10
  - 13
  - 14
  - 15
  - 18
  - 20
  - 21
  - 22
  - 23
  - 25
  - 27
  - 28
  - 32
  - 33
  - 35
  - 37
  - 38
  - 39
  - 41
  - 47
  - 48
  - 51
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 77
  - 80
  - 81
  - 84
  - 86
  - 89
  - 90
  - 91
  - 92
  - 94
  - 95
  - 96
  - 98
possible_descendants_of_t_in_g_guess:
  - 3
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 1
  - 2
  - 4
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 17
  - 18
  - 20
  - 21
  - 22
  - 23
  - 25
  - 26
  - 27
  - 28
  - 31
  - 32
  - 33
  - 35
  - 36
  - 37
  - 38
  - 39
  - 41
  - 44
  - 47
  - 48
  - 49
  - 51
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
oset_for_t_onto_y_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 17
  - 18
  - 20
  - 21
  - 22
  - 23
  - 25
  - 26
  - 27
  - 28
  - 31
  - 32
  - 33
  - 35
  - 36
  - 37
  - 38
  - 39
  - 41
  - 44
  - 47
  - 48
  - 49
  - 51
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 77
  - 80
  - 81
  - 82
  - 83
  - 84
  - 86
  - 88
  - 89
  - 90
  - 91
  - 92
  - 94
  - 95
  - 96
  - 98
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 1
  - 2
  - 4
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 17
  - 18
  - 20
  - 21
  - 22
  - 23
  - 25
  - 26
  - 27
  - 28
  - 31
  - 32
  - 33
  - 35
  - 36
  - 37
  - 38
  - 39
  - 41
  - 44
  - 47
  - 48
  - 49
  - 51
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 77
  - 80
  - 81
  - 82
  - 83
  - 84
  - 86
  - 88
  - 89
  - 90
  - 91
  - 92
  - 94
  - 95
  - 96
  - 98
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 2
  - 4
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 17
  - 18
  - 20
  - 21
  - 22
  - 23
  - 25
  - 26
  - 27
  - 28
  - 31
  - 32
  - 33
  - 35
  - 36
  - 37
  - 38
  - 39
  - 41
  - 44
  - 47
  - 48
  - 49
  - 51
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 77
  - 80
  - 81
  - 82
  - 83
  - 84
  - 86
  - 88
  - 89
  - 90
  - 91
  - 92
  - 94
  - 95
  - 96
  - 98
