gadjid/src/snapshots/gadjid__test__large-DAG08-vs-DAG09.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10008.DAG-100
g_guess: 10009.DAG-100
ancestor_aid:
  - 0.0014141414141414141
  - 14
oset_aid:
  - 0.01585858585858586
  - 157
parent_aid:
  - 0.1703030303030303
  - 1686
shd:
  - 0.007676767676767677
  - 38
t:
  - 0
  - 2
  - 6
  - 7
  - 8
  - 9
  - 11
  - 13
  - 16
  - 17
  - 18
  - 19
  - 23
  - 24
  - 25
  - 27
  - 28
  - 30
  - 31
  - 35
  - 36
  - 37
  - 44
  - 45
  - 46
  - 56
  - 63
  - 64
  - 67
  - 68
  - 70
  - 72
  - 75
  - 78
  - 79
  - 80
  - 86
  - 90
  - 91
  - 93
  - 95
  - 96
  - 97
y: 88
z:
  - 4
  - 10
  - 12
  - 15
  - 20
  - 21
  - 22
  - 32
  - 34
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 47
  - 48
  - 50
  - 53
  - 54
  - 55
  - 57
  - 59
  - 61
  - 71
  - 73
  - 74
  - 76
  - 77
  - 81
  - 82
  - 83
  - 84
  - 85
  - 87
  - 89
  - 92
  - 94
  - 98
  - 99
possible_descendants_of_t_in_g_guess:
  - 0
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 1
  - 3
  - 4
  - 5
  - 10
  - 12
  - 14
  - 15
  - 20
  - 21
  - 22
  - 26
  - 29
  - 32
  - 33
  - 34
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 65
  - 66
  - 69
  - 71
  - 73
  - 74
  - 76
  - 77
  - 81
  - 82
  - 84
  - 85
  - 88
oset_for_t_onto_y_in_g_guess:
  - 0
  - 1
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 98
  - 99
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 3
  - 4
  - 5
  - 10
  - 12
  - 14
  - 15
  - 20
  - 21
  - 22
  - 26
  - 29
  - 32
  - 33
  - 34
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 65
  - 66
  - 69
  - 71
  - 73
  - 74
  - 76
  - 77
  - 81
  - 82
  - 83
  - 84
  - 85
  - 87
  - 88
  - 89
  - 92
  - 94
  - 98
  - 99
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 1
  - 3
  - 4
  - 5
  - 10
  - 12
  - 14
  - 15
  - 20
  - 21
  - 22
  - 26
  - 29
  - 32
  - 33
  - 34
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 65
  - 66
  - 69
  - 71
  - 73
  - 74
  - 76
  - 77
  - 81
  - 82
  - 83
  - 84
  - 85
  - 87
  - 88
  - 89
  - 92
  - 94
  - 98
  - 99
not_validly_adjusted_for_in_g_guess_by_z:
  - 1
  - 3
  - 4
  - 5
  - 10
  - 12
  - 14
  - 15
  - 20
  - 21
  - 22
  - 26
  - 29
  - 32
  - 33
  - 34
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 65
  - 66
  - 69
  - 71
  - 73
  - 74
  - 76
  - 77
  - 81
  - 82
  - 83
  - 84
  - 85
  - 87
  - 88
  - 89
  - 92
  - 94
  - 98
  - 99
