gadjid/src/snapshots/gadjid__test__large-DAG10-vs-DAG01.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10010.DAG-100
g_guess: 10001.DAG-100
ancestor_aid:
  - 0.4537373737373737
  - 4492
oset_aid:
  - 0.4794949494949495
  - 4747
parent_aid:
  - 0.8743434343434343
  - 8656
shd:
  - 0.503030303030303
  - 2490
t:
  - 6
  - 8
  - 9
  - 10
  - 13
  - 16
  - 20
  - 22
  - 25
  - 43
  - 44
  - 55
  - 62
  - 69
  - 72
  - 82
  - 84
  - 85
  - 87
  - 88
  - 90
  - 92
  - 95
y: 15
z:
  - 1
  - 11
  - 19
  - 29
  - 30
  - 32
  - 65
  - 66
  - 67
  - 75
  - 77
  - 79
  - 99
possible_descendants_of_t_in_g_guess:
  - 6
  - 8
  - 9
  - 10
  - 11
  - 13
  - 16
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 3
  - 7
  - 15
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 89
  - 90
  - 91
  - 93
  - 94
  - 96
  - 97
  - 98
  - 99
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 7
  - 11
  - 12
  - 14
  - 15
  - 17
  - 18
  - 19
  - 21
  - 23
  - 24
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 70
  - 71
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 83
  - 86
  - 89
  - 91
  - 93
  - 94
  - 96
  - 97
  - 98
  - 99
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 7
  - 11
  - 12
  - 14
  - 15
  - 17
  - 18
  - 19
  - 21
  - 23
  - 24
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 70
  - 71
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 83
  - 86
  - 89
  - 91
  - 93
  - 94
  - 96
  - 97
  - 98
  - 99
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 7
  - 11
  - 12
  - 14
  - 15
  - 17
  - 18
  - 19
  - 21
  - 23
  - 24
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 70
  - 71
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 83
  - 86
  - 89
  - 91
  - 93
  - 94
  - 96
  - 97
  - 98
  - 99
