gadjid/src/snapshots/gadjid__test__large-DAG20-vs-DAG21.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 100-node-DAG-20
g_guess: 100-node-DAG-21
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0.023636363636363636
  - 234
parent_aid:
  - 0.04080808080808081
  - 404
shd:
  - 0.006464646464646465
  - 32
t:
  - 9
y: 65
z:
  - 0
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 17
  - 18
  - 19
  - 20
  - 21
  - 24
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 45
  - 46
  - 47
  - 48
  - 50
  - 51
  - 53
  - 54
  - 55
  - 56
  - 58
  - 59
  - 60
  - 61
  - 62
  - 64
  - 66
  - 69
  - 70
  - 71
  - 72
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 83
  - 84
  - 85
  - 87
  - 88
  - 89
  - 90
  - 92
  - 93
  - 96
  - 97
  - 98
  - 99
possible_descendants_of_t_in_g_guess:
  - 9
  - 18
  - 19
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 56
  - 57
  - 58
  - 59
  - 62
  - 65
oset_for_t_onto_y_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 20
not_validly_adjusted_for_in_g_guess_by_parents_of_t: []
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 20
not_validly_adjusted_for_in_g_guess_by_empty_set: []
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
