gadjid/src/snapshots/gadjid__test__large-DAG21-vs-DAG22.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 100-node-DAG-21
g_guess: 100-node-DAG-22
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0.018585858585858588
  - 184
parent_aid:
  - 0.06262626262626263
  - 620
shd:
  - 0.006262626262626263
  - 31
t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 57
  - 58
  - 59
  - 60
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
y: 61
z:
  - 13
  - 22
  - 47
  - 55
  - 56
  - 70
  - 93
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 61
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 92
  - 96
  - 97
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 13
  - 22
  - 47
  - 55
  - 56
  - 61
  - 70
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 13
  - 22
  - 47
  - 55
  - 56
  - 61
  - 70
not_validly_adjusted_for_in_g_guess_by_z:
  - 13
  - 22
  - 47
  - 55
  - 56
  - 61
  - 70
  - 93
