gadjid/src/snapshots/gadjid__test__large-DAG24-vs-DAG25.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 100-node-DAG-24
g_guess: 100-node-DAG-25
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0.0017171717171717172
  - 17
parent_aid:
  - 0.01686868686868687
  - 167
shd:
  - 0.006262626262626263
  - 31
t:
  - 4
  - 7
  - 8
  - 9
  - 11
  - 12
  - 15
  - 19
  - 20
  - 21
  - 24
  - 26
  - 28
  - 30
  - 32
  - 35
  - 37
  - 38
  - 40
  - 41
  - 46
  - 49
  - 51
  - 53
  - 55
  - 59
  - 71
  - 72
  - 74
  - 75
  - 76
  - 78
  - 79
  - 80
  - 83
  - 86
  - 93
  - 94
  - 95
y: 60
z:
  - 0
  - 1
  - 3
  - 5
  - 6
  - 10
  - 16
  - 17
  - 18
  - 22
  - 25
  - 27
  - 29
  - 33
  - 34
  - 36
  - 44
  - 47
  - 48
  - 50
  - 52
  - 54
  - 57
  - 58
  - 61
  - 63
  - 64
  - 66
  - 68
  - 69
  - 70
  - 73
  - 77
  - 81
  - 85
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 96
  - 97
  - 98
  - 99
possible_descendants_of_t_in_g_guess:
  - 4
  - 7
  - 8
  - 9
  - 11
  - 12
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 24
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 76
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 83
  - 84
  - 85
  - 86
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 93
  - 94
  - 95
  - 96
  - 97
  - 98
  - 99
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 6
  - 10
  - 13
  - 14
  - 16
  - 17
  - 18
  - 22
  - 23
  - 25
  - 27
  - 29
  - 31
  - 33
  - 34
  - 39
  - 42
  - 43
  - 44
  - 45
  - 47
  - 52
  - 54
  - 60
oset_for_t_onto_y_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 6
  - 8
  - 10
  - 13
  - 21
  - 23
  - 25
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
  - 10
  - 11
  - 12
  - 13
  - 14
  - 15
  - 16
  - 17
  - 18
  - 19
  - 20
  - 21
  - 22
  - 23
  - 24
  - 25
  - 26
  - 27
  - 28
  - 29
  - 30
  - 31
  - 32
  - 33
  - 34
  - 35
  - 36
  - 37
  - 38
  - 39
  - 40
  - 41
  - 42
  - 43
  - 44
  - 45
  - 46
  - 47
  - 48
  - 49
  - 50
  - 51
  - 52
  - 53
  - 54
  - 55
  - 56
  - 57
  - 58
  - 59
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 71
  - 72
  - 73
  - 74
  - 75
  - 77
  - 78
  - 79
  - 80
  - 81
  - 82
  - 84
  - 85
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 96
  - 97
  - 98
  - 99
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 6
  - 8
  - 10
  - 13
  - 14
  - 16
  - 17
  - 18
  - 21
  - 22
  - 23
  - 25
  - 27
  - 29
  - 31
  - 33
  - 34
  - 36
  - 39
  - 42
  - 43
  - 44
  - 45
  - 47
  - 48
  - 50
  - 52
  - 54
  - 56
  - 57
  - 58
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 73
  - 77
  - 81
  - 82
  - 84
  - 85
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 96
  - 97
  - 98
  - 99
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 6
  - 10
  - 13
  - 14
  - 16
  - 17
  - 18
  - 22
  - 23
  - 25
  - 27
  - 29
  - 31
  - 33
  - 34
  - 36
  - 39
  - 42
  - 43
  - 44
  - 45
  - 47
  - 48
  - 50
  - 52
  - 54
  - 56
  - 57
  - 58
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 73
  - 77
  - 81
  - 82
  - 84
  - 85
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 96
  - 97
  - 98
  - 99
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 6
  - 10
  - 13
  - 14
  - 16
  - 17
  - 18
  - 22
  - 23
  - 25
  - 27
  - 29
  - 31
  - 33
  - 34
  - 36
  - 39
  - 42
  - 43
  - 44
  - 45
  - 47
  - 48
  - 50
  - 52
  - 54
  - 56
  - 57
  - 58
  - 60
  - 61
  - 62
  - 63
  - 64
  - 65
  - 66
  - 67
  - 68
  - 69
  - 70
  - 73
  - 77
  - 81
  - 82
  - 84
  - 85
  - 87
  - 88
  - 89
  - 90
  - 91
  - 92
  - 96
  - 97
  - 98
  - 99
